opam-version: "1.2"
name:         "rosetta"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/rosetta"
bug-reports:  "https://github.com/dinosaure/rosetta/issues"
dev-repo:     "https://github.com/dinosaure/rosetta.git"
doc:          "https://dinosaure.github.io/rosetta/"
license:      "MIT"

build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: [
  "jbuilder" {build}
  "fmt"
  "bos"
  "uutf"
  "cmdliner"
  "coin"
  "uuuu"
  "yuscii"
]

available: [ocaml-version >= "4.03.0"]
